force-app/main/default/objects/Venue__c/fields/Capacity__c.field-meta.xml
<CustomField><fullName>Capacity__c</fullName><externalId>false</externalId><label>Capacity</label><precision>18</precision><required>false</required><scale>0</scale><trackTrending>false</trackTrending><type>Number</type><unique>false</unique></CustomField>