force-app/main/default/objects/Venue__c/fields/Location__c.field-meta.xml
<CustomField><fullName>Location__c</fullName><externalId>false</externalId><label>Location</label><required>false</required><trackTrending>false</trackTrending><type>Url</type></CustomField>